--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ZEIT ONLINE Frontend-Day / Hackathon 2017</title>
+        <title>ZEIT ONLINE Audio Explorer</title>
     </head>
     <body>
         <div id="Root"></div>
